--- a/templates/deploy/deploy_list.html
+++ b/templates/deploy/deploy_list.html
@@ -210,7 +210,7 @@
                             <div class="well">
                                 <h4>项目管理说明</h4>
                                 <p>预生产环境与生产环境的代码部署需要审批，测试环境则不需要。</p>
-                                <a class="btn btn-default btn-lg btn-block" target="_blank" href="/deploy_add"><i class="fa fa-plus-circle "></i>新建项目</a>
+                                <a class="btn btn-default btn-lg btn-block" target="_blank" href="/codedeploy/deploy_add"><i class="fa fa-plus-circle "></i>新建项目</a>
                             </div>
                         </div>
                         <!-- /.panel-body -->
