--- a/templates/login.html
+++ b/templates/login.html
@@ -9,26 +9,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>OpsManage - 运维管理平台</title>
+    <title>运维管理平台</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- MetisMenu CSS -->
-    <link href="/static/vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="/static/dist/css/sb-admin-2.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="/static/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+  {% include 'head_js_css.html' %}
 
 </head>
 
@@ -36,37 +19,36 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-4 col-md-offset-4">
+            <div class="col-md-5 col-md-offset-4">
                 <div class="login-panel panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">
-                        	{% if login_error_info %}
-                        		{{ login_error_info }}
-                        	{% else %}
-                        		请输入用户名跟密码
-                        	{% endif %}
-                        	
+                        <h3 class="panel-info text-center">
+                        		运维管理平台
                         </h3>
                     </div>
                     <div class="panel-body">
-                        <form role="form" method="post">{% csrf_token %}
+                        <form role="form" method="post">
+                            {% csrf_token %}
                             <fieldset>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="Username" name="username" type="text" autofocus>
+                                    <input class="form-control" placeholder="用户名" name="username" type="text" autofocus>
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="Password" name="password" type="password" value="">
+                                    <input class="form-control" placeholder="密码" name="password" type="password" value="">
                                 </div>
                                 <div class="checkbox">
                                     <label>
-                                        <input name="remember" type="checkbox" value="Remember Me">记住账户/密码
+                                        <input name="remember" type="checkbox" value="Remember Me">记住密码
                                     </label>
                                 </div>
-                                <!-- Change this to a button or input when using this as a form -->
-                                <!-- <a href="index.html" class="btn btn-lg btn-success btn-block">登录</a> -->
                                 <button type="submit" class="btn btn-lg btn-success btn-block">登录 </button>
                             </fieldset>
                         </form>
+                        <div>
+                             {% if login_error_info %}
+                        		{{ login_error_info }}
+                             {% endif %}
+                        </div>
                     </div>
                 </div>
             </div>
@@ -74,16 +56,7 @@
     </div>
 
     <!-- jQuery -->
-    <script src="/static/vendor/jquery/jquery.min.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="/static/vendor/bootstrap/js/bootstrap.min.js"></script>
-
-    <!-- Metis Menu Plugin JavaScript -->
-    <script src="/static/vendor/metisMenu/metisMenu.min.js"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="/static/dist/js/sb-admin-2.js"></script>
+    {% include 'foot_js.html' %}
 
 </body>
 
